--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ DEBUG=True
 # LLM Configuration
 # Get your API key from OpenAI Platform
 OPENAI_API_KEY=sk-your-openai-api-key-here
+
+# Frontend Configuration
+VITE_API_URL=http://localhost:8000
